--- a/views/widget.html
+++ b/views/widget.html
@@ -6,9 +6,12 @@
 	{% set heroItems = data.widget.heroVideo %}
 {% endif %}
 
+{{ data.widget | json}}
+
 <div data-ec-page-hero data-ec-page-hero-{{data.widget._id}} data-background-color="#000">
 	{% for hero in heroItems %}
 		<div>
+			{{data.widget.config.heroHeight}}
 			<div class="focal-point" style="{% if apos.attachments.hasFocalPoint(hero) %}
       background-position: {{ apos.attachments.focalPointToBackgroundPosition(hero) }};
     {%- endif -%}
