--- a/views/widget.html
+++ b/views/widget.html
@@ -1,4 +1,6 @@
 {% set heroItems = "" %}
+{% set dots = "" %}
+{% set speed = "" %}
 
 {% if data.widget.heroImages != "" %}
 	{% set heroItems = apos.images.all(data.widget.heroImages) %}
@@ -6,7 +8,19 @@
 	{% set heroItems = data.widget.heroVideo %}
 {% endif %}
 
-<div data-ec-page-hero data-ec-page-hero-{{data.widget._id}} data-background-color="#000">
+{{data.options.dots | dump}}
+{% if data.options.dots | dump %}
+	{% set dots = data.options.dots %}
+{% else %}
+	{% set dots = data.widget.config.dots %}
+{% endif %}
+{% if data.options.speed | dump %}
+	{% set speed = data.options.speed %}
+{% else %}
+	{% set speed = data.widget.config.speed %}
+{% endif %}
+<div data-ec-page-hero data-ec-page-hero-{{data.widget._id}} data-background-color='#000' 
+data-slick='{"dots": {{dots | dump}},"speed": "{{speed}}"}'>
 	{% for hero in heroItems %}
 		<div>
 			<div class="focal-point" style="{% if apos.attachments.hasFocalPoint(hero) %}
