--- a/views/widget.html
+++ b/views/widget.html
@@ -2,10 +2,10 @@
 {% set dots = "" %}
 {% set speed = "" %}
 
-{% if data.widget.heroImages != "" %}
-	{% set heroItems = apos.images.all(data.widget.heroImages) %}
+{% if data.widget.heroVideo.items != "" %}
+	{% set heroItems = data.widget.heroVideo.items %}
 {% else %}
-	{% set heroItems = data.widget.heroVideo %}
+	{% set heroItems = apos.images.all(data.widget.heroImages) %}
 {% endif %}
 
 {{data.options.dots | dump}}
@@ -22,11 +22,77 @@
 <div data-ec-page-hero data-ec-page-hero-{{data.widget._id}} data-background-color='#000' 
 data-slick='{"dots": {{dots | dump}},"speed": "{{speed}}"}'>
 	{% for hero in heroItems %}
+
+		{% if hero.type == "attachment" %}
 		<div>
 			<div class="focal-point" style="{% if apos.attachments.hasFocalPoint(hero) %}
       background-position: {{ apos.attachments.focalPointToBackgroundPosition(hero) }};
     {%- endif -%}
     background-image: url({{ apos.attachments.url(hero, { size: 'full' }) }})"></div>
 		</div>
+		{% endif %}
+
+		{% if hero.type == "apostrophe-video" %}
+		<div>
+			<section id="page-banner" class="bg-image" style="background-image: url('{{hero.video.thumbnail}}');">
+		      <div class="overlay">			
+		        <div class="inner">		
+		            <h1>{{data.page.title|upper}}</h1>	
+		        </div>
+		      </div>
+		      <div class="video_wrap" style="display:none"><div id="player"></div></div>
+    		</section>
+		</div>
+		{% endif %}
 	{% endfor %}
 </div>
+
+<script>
+
+// Loads the YouTube IFrame API JavaScript code.
+var tag = document.createElement('script');
+tag.src = "https://www.youtube.com/iframe_api";
+// Inserts YouTube JS code into the page.
+var firstScriptTag = document.getElementsByTagName('script')[0];
+firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+var player;
+
+// onYouTubeIframeAPIReady() is called when the IFrame API is ready to go.
+function onYouTubeIframeAPIReady() {
+  	player = new YT.Player('player', {
+    	height: '360',
+      width: '640',
+      videoId: '{{data.widget.heroVideo.items[0].video.url.split("v=")[1]}}',
+      playerVars: { 'autohide': 1,'autoplay': 1, 'controls': 0, 'showinfo': 0, 'rel': 0, 'enablejsapi':1, 'wmode' : 'transparent'},
+      events : {
+     	 	'onReady' : pkOnPlayerReady,
+         'onStateChange' : pkOnPlayerStateChange
+      }
+  	});
+}
+
+function pkOnPlayerStateChange(e) {
+  	var frm = $(e.target.getIframe());
+  	if (e.data === YT.PlayerState.ENDED) {
+      if ('player' === frm.attr('id')) {
+          player.playVideo();
+      }
+  	}
+  	if (e.data === YT.PlayerState.BUFFERING) {
+      if ('player' === frm.attr('id')) {
+         e.target.setPlaybackQuality('hd720');
+		}
+  	}
+}
+function pkOnPlayerReady(e) {
+	player.mute();
+ 	e.target.setPlaybackQuality('hd720');
+ 	  console.log(e.target);
+}
+
+
+
+
+
+</script>
