--- a/public/css/always.less
+++ b/public/css/always.less
@@ -13,7 +13,7 @@
 .overlay    { position:relative;  height:100%; width:100%; z-index:2; }
 .inner      { padding-top:50px; }
   h1      { color:#ffffff; margin:0 auto; }
-.video_wrap   { height:100%; width:100%; position:absolute; left:0; overflow:hidden; top:0; padding-bottom:56.5%; } 
+.video_wrap   { height:100%; width:100%; position:absolute; left:0; overflow:hidden; top:-100px; padding-bottom:56.5%; } 
 iframe      { height:100%; position:absolute; width:100%; top:0; left:0; }
 
 }
