--- a/views/widget.html
+++ b/views/widget.html
@@ -8,6 +8,9 @@
 	{% set heroItems = apos.images.all(data.widget.heroImages) %}
 {% endif %}
 
+{% if data.widget.heroVideo != "" %}
+	{% set videoId = data.widget.heroVideo.items[0].video.url.split("v=")[1] %}
+{% endif %}
 {{data.options.dots | dump}}
 {% if data.options.dots | dump %}
 	{% set dots = data.options.dots %}
@@ -34,7 +37,7 @@ data-slick='{"dots": {{dots | dump}},"speed": "{{speed}}"}'>
 
 		{% if hero.type == "apostrophe-video" %}
 		<div>
-			<section id="page-banner" class="bg-image" style="background-image: url('{{hero.video.thumbnail}}');">
+			<section id="page-banner" class="bg-image" style="background-image: url('http://i.ytimg.com/vi/{{videoId}}/maxresdefault.jpg');">
 		      <div class="overlay">			
 		        <div class="inner">		
 		            <h1>{{data.page.title|upper}}</h1>	
@@ -57,14 +60,14 @@ var firstScriptTag = document.getElementsByTagName('script')[0];
 firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
 
 var player;
-
+//https://www.youtube.com/embed/0mg3Rgo0Jno?enablejsapi=1&controls=0&fs=0&iv_load_policy=3&rel=0&showinfo=0&loop=1&playlist=tdwbYGe8pv8&start=102
 // onYouTubeIframeAPIReady() is called when the IFrame API is ready to go.
 function onYouTubeIframeAPIReady() {
   	player = new YT.Player('player', {
     	height: '360',
       width: '640',
-      videoId: '{{data.widget.heroVideo.items[0].video.url.split("v=")[1]}}',
-      playerVars: { 'autohide': 1,'autoplay': 1, 'controls': 0, 'showinfo': 0, 'rel': 0, 'enablejsapi':1, 'wmode' : 'transparent'},
+      videoId: '{{videoId}}',
+      playerVars: { 'autohide': 1,'autoplay': 1, 'controls': 0, 'showinfo': 0, 'rel': 0, 'enablejsapi':1, 'wmode' : 'transparent','iv_load_policy':3,'rel': 0,'loop':1,'playlist': '{{videoId}}','iv_load_policy':3,'fs':0},
       events : {
      	 	'onReady' : pkOnPlayerReady,
          'onStateChange' : pkOnPlayerStateChange
