update video and configurations

--- a/public/css/always.less
+++ b/public/css/always.less
@@ -10,11 +10,11 @@
 
 	#page-banner  { text-align:center; position:relative; color:#ffffff; height:679px; overflow:hidden; }
 .bg-image     { background-size:cover; background-position:center center; }
-.overlay    { position:relative;  height:100%; width:100%; z-index:2; }
-.inner      { padding-top:50px; }
+.overlay    { position:absolute;  height:100%; width:100%; z-index:2; }
+.inner      { padding-top:50px; text-align: center;}
   h1      { color:#ffffff; margin:0 auto; }
-.video_wrap   { height:100%; width:100%; position:absolute; left:0; overflow:hidden; top:0; padding-bottom:56.5%; } 
-iframe      { height:100%; position:absolute; width:100%; top:-100px; left:0; }
+.video_wrap   { height:100%; width:100%; position:absolute; left:0; overflow:hidden; top:-100px; padding-bottom:56.5%; } 
+iframe      { height:100%; position:absolute; width:100%; top:0; left:0; }
 
 }
 
