--- a/public/css/always.less
+++ b/public/css/always.less
@@ -18,3 +18,43 @@ iframe      { height:100%; position:absolute; width:100%; top:0; left:0; }
 
 }
 
+[data-ec-page-hero] {
+
+	&[data-font-style="1"] h1 {
+		font-family: 'BookItalic Pro';
+	}
+
+	&[data-font-style="2"] h1 {
+		font-family: 'YWFTPakt';
+	}
+
+	&[data-font-style="3"] h1 {
+		font-family: 'BookItalic Pro';
+	}
+
+	h1{
+    font-size: 11rem;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    text-shadow: 2px 2px rgba(0,0,0,0.3);
+    transform: translateY(-50%);
+    color: rgba(255,255,255,0.7);
+        font-size: 10vw;
+    line-height: 10vw;
+    margin: 0;
+    padding: 0;
+    text-transform: uppercase;
+    font-family: 'BookItalic Pro';
+    font-weight: normal;
+    opacity: 0.6;
+	}
+}
+[data-loading] {
+	overflow: hidden;
+}
+
+[data-loading=""] {
+	display: none;
+}
