--- a/views/widget.html
+++ b/views/widget.html
@@ -24,7 +24,7 @@
 	{% set speed = data.widget.imageConfig.speed %}
 {% endif %}
 <div data-ec-page-hero data-ec-page-hero-{{data.widget._id}} data-background-color='#000' 
-data-slick='{"dots": {{dots | dump}},"speed": "{{speed}}"}'>
+data-slick='{"dots": {{dots | dump}},"speed": "{{speed}}"}' data-loading>
 	<div class="overlay">			
 		        <div class="inner">
 		        	{% if data.widget.selectOverlay == 'page-title' %}		
@@ -60,11 +60,10 @@ data-slick='{"dots": {{dots | dump}},"speed": "{{speed}}"}'>
 
 		{% if hero.type == "apostrophe-video" %}
 		<div class="slide">
-			<section id="page-banner" class="bg-image" style="background-image: url('//i.ytimg.com/vi/{{videoId}}/maxresdefault.jpg');">
+			<section id="page-banner" class="bg-image" style="background-image: url('http://i.ytimg.com/vi/{{videoId}}/maxresdefault.jpg');">
 		      <div class="video_wrap" style="display:none"><div id="player"></div></div>
     		</section>
 		</div>
 		{% endif %}
 	{% endfor %}
 </div>
-
