--- a/views/widget.html
+++ b/views/widget.html
@@ -60,10 +60,11 @@ data-slick='{"dots": {{dots | dump}},"speed": "{{speed}}"}' data-loading>
 
 		{% if hero.type == "apostrophe-video" %}
 		<div class="slide">
-			<section id="page-banner" class="bg-image" style="background-image: url('http://i.ytimg.com/vi/{{videoId}}/maxresdefault.jpg');">
+			<section id="page-banner" class="bg-image" style="background-image: url('//i.ytimg.com/vi/{{videoId}}/maxresdefault.jpg');">
 		      <div class="video_wrap" style="display:none"><div id="player"></div></div>
     		</section>
 		</div>
 		{% endif %}
 	{% endfor %}
 </div>
+
