--- a/public/css/always.less
+++ b/public/css/always.less
@@ -10,7 +10,7 @@
 
 	#page-banner  { text-align:center; position:relative; color:#ffffff; height:679px; overflow:hidden; }
 .bg-image     { background-size:cover; background-position:center center; }
-.overlay    { position:absolute;  height:100%; width:100%; z-index:2; }
+.overlay    { height:100%; width:100%; z-index:99; }
 .inner      { padding-top:50px; text-align: center;}
   h1      { color:#ffffff; margin:0 auto; }
 .video_wrap   { height:100%; width:100%; position:absolute; left:0; overflow:hidden; top:-100px; padding-bottom:56.5%; } 
